# Simple_LinuxAdmin_TgBot_AIOGram

./: .gitignore  Dockerfile  LICENSE  README.md  admin_linux.py  app.py  area.pkl  area.py  config_reader.py  docker-compose.yaml  docker-compose.yml  keyboard.py  main.py  pyproject.toml  requirements.txt  skills.py  test_pickle.py
AIOGram_V2/: admin_linux.py
AIOGram_V2/code/: Regular_KB_Bot.py  bot.py
AIOGram_V2/scripts/: moscow.txt  py_stop.sh
AIOGram_v3/: README.md  req.txt  simple_bot0.py  tg_yolo_bot1.py
code/: 0.bot.py  Media_Types_Bot.py
data/: area.pkl  result.json
scripts/: admin_bot_install.sh  t_me.sh
static/css/: base.css  contacts.css  main.css  search.css
systemctl/: README.md  docker_auto-start.md  ssh_problem.md  ssh_tunnel.service
templates/: contacts.html  index.html  search-results.html  search.html
