[tool.poetry]
name = "hh-vacancies"
version = "0.1.0"
description = "requests HH by keywords"
authors = ["Dmitry <7292337@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.0"
regex = "^2023.3.23"
requests = "^2.28.2"
flask = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
